# CPD-Hsymbol-Wildcard

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Inspect.ipynb  Makefile  README.md  all-pre.sh  all-run.sh  build.sh  extract_size.sh  gen_fastmap.cpp  main.cpp  pre.sh  run.sh  run_all.sh  sub-pre.sh  sub-run.sh  test.cpp  testing.cpp  visualGen.cpp
analysis/: build-tcost.txt  cnums.txt  dijkstra-tcost.txt  experiment.ipynb  map_category.json  pure-size.txt  size_all.txt  size_part.txt  size_sub.txt  utilities.py
analysis/.ipynb_checkpoints/: experiment-checkpoint.ipynb
competitors/: focal.cpp  focal.h
competitors/tree/: Entry.cpp  Entry.h  main.cpp  makefile  outputs  scens
documents/: .gitignore  hsymbol.graffle  main.tex
graph/: adj_graph.h  list_graph.h
icaps19-paper/: abstract.tex  ack.tex  centroid-red-symb.tex  extra.bib  gridmap.graphml  h-symb.tex  intro.tex  macros.tex  master.tex  prelim.tex  ref.bib  references.bib  results.tex  rows.graphml  rows2.graphml  setup.tex  square.tex  units.sty
integrated-sz/: .gitignore  README.md  extract_size.sh  main.cpp  run_all.sh  run_small.sh  test.cpp
integrated-sz/analysis/: all_size.txt  experiment.ipynb
integrated-sz/outputs/: AR0044SR-0.txt  AR0044SR-3.txt  AR0044SR-pure-0.txt  AR0044SR-pure-3.txt  AR0605SR-0.txt  AR0605SR-3.txt  AR0605SR-pure-0.txt  AR0605SR-pure-3.txt  AR0700SR-0.txt  AR0700SR-3.txt  AR0700SR-pure-0.txt  AR0700SR-pure-3.txt  Aftershock-0.txt  Aftershock-3.txt  Aftershock-pure-0.txt  Aftershock-pure-3.txt  DarkContinent-0.txt  DarkContinent-3.txt  DarkContinent-pure-0.txt  DarkContinent-pure-3.txt  FireWalker-0.txt  FireWalker-3.txt  FireWalker-pure-0.txt  FireWalker-pure-3.txt  HotZone-0.txt  HotZone-3.txt  HotZone-pure-0.txt  HotZone-pure-3.txt  Medusa-0.txt  Medusa-3.txt  Medusa-pure-0.txt  Medusa-pure-3.txt  TheatreofWar-0.txt  TheatreofWar-3.txt  TheatreofWar-pure-0.txt  TheatreofWar-pure-3.txt  Turbo-0.txt  Turbo-3.txt  Turbo-pure-0.txt  Turbo-pure-3.txt  (+597 more)
integrated-sz/src/: Entry.cpp  Entry.h  Hsymbol.h  order.cpp
integrated-sz/test/: hmoves2.in
maps/: test.map  test2.map
mattia/gppc_wildcard_rect/: build.sh  run.sh  run_all.sh  size_cut_old.csv
merging/: run_small.sh  test.cpp
merging/outputs/: arena-0.txt  arena-1.txt  arena-2.txt  arena2-0.txt  arena2-1.txt  arena2-2.txt  brc000d-0.txt  brc000d-2.txt  brc100d-0.txt  brc100d-1.txt  brc100d-2.txt  brc101d-0.txt  brc200d-0.txt  brc201d-0.txt  brc202d-0.txt  brc202d-1.txt  brc202d-2.txt  brc203d-0.txt  brc300d-0.txt  brc501d-0.txt  brc502d-0.txt  den202d-0.txt  den202d-1.txt  den202d-2.txt  den404d-0.txt  den404d-original.txt  maze512-1-0-1.txt  orz999d-1.txt  random512-10-0-1.txt
merging/src/: Entry.cpp  dijkstra.h
merging/utility/: mapper.h
outputs/: arena-0.txt  arena-1.txt  arena-3.txt  arena-original.txt  arena2-0.txt  arena2-3.txt  brc000d-0.txt  brc000d-3.txt  brc100d-0.txt  brc100d-1.txt  brc100d-3.txt  brc101d-0.txt  brc200d-0.txt  brc202d-1.txt  brc202d-3.txt  brc203d-1.txt  brc204d-1.txt  brc300d-0.txt  brc300d-1.txt  brc501d-1.txt  brc502d-1.txt  brc503d-0.txt  brc997d-0.txt  brc997d-1.txt  brc999d-0.txt  brc999d-1.txt  combat-0.txt  combat2-0.txt  den005d-0.txt  den005d-1.txt  den009d-0.txt  den009d-1.txt  den011d-0.txt  den012d-1.txt  den020d-0.txt  den200n-0.txt  den200n-1.txt  den200n-3.txt  den201d-1.txt  den202d-0.txt  (+142 more)
outputs/cpd/: AcrosstheCape.map-3-dfs-c16-inv.txt  AcrosstheCape.map-3-dfs-c16.txt  AcrosstheCape.map-3-dfs-c2-inv.txt  AcrosstheCape.map-3-dfs-c2.txt  AcrosstheCape.map-3-dfs-c32-inv.txt  AcrosstheCape.map-3-dfs-c32.txt  AcrosstheCape.map-3-dfs-c4-inv.txt  AcrosstheCape.map-3-dfs-c4.txt  AcrosstheCape.map-3-dfs-c64-inv.txt  AcrosstheCape.map-3-dfs-c64.txt  AcrosstheCape.map-3-dfs-c8-inv.txt  AcrosstheCape.map-3-dfs-c8.txt  AcrosstheCape.map-3-dfs-opt-inv.txt  AcrosstheCape.map-3-dfs-opt.txt  Aftershock.map-3-dfs-c16-inv.txt  Aftershock.map-3-dfs-c16.txt  Aftershock.map-3-dfs-c2-inv.txt  Aftershock.map-3-dfs-c2.txt  Aftershock.map-3-dfs-c32-inv.txt  Aftershock.map-3-dfs-c32.txt  Aftershock.map-3-dfs-c4-inv.txt  (+1604 more)
paper/: Makefile  abstract.tex  background.tex  centroids.tex  conclusion.tex  experiments.tex  extra.bib  introduction.tex  misc.tex  paper.fdb_latexmk  paper.fls  paper.tex  references.bib  reverse.tex
road-network/: CMakeLists.txt  gen.cpp  main.cpp  test.cpp
road-network/outputs/: NY-DFS-SRC-RLE-1-q10.csv  NY-DFS-SRC-RLE-1-q100.csv  NY-DFS-SRC-RLE-1-q800.csv
road-network/scens/: NY-225274.scen  NY.scen  ny10.scen  ny3.scen  sample0.scen  sample1.scen
road-network/scripts/: visualization.R
road-network/src/: Hsymbol.h  Preprocessing.cpp  Preprocessing.h  Query.cpp  Query.h  adj_graph.h  dijkstra.h  geo.h  lifelong_dij.h  list_graph.h  order.cpp  order.h  sector_wildcard.h
road-network/test/cases/: cpdrow.in  getpath.in  row.in
road-network/test/maps/ny10/: ny10.co  ny10.gr
road-network/test/maps/ny3/: ny3.co  ny3.gr
road-network/test/maps/sample0/: sample0.co  sample0.gr
road-network/test/maps/sample1/: sample1.co  sample1.gr
road-network/utility/: RoadNetworkLoader.h  constants.h  heap.h  mapper.h
scens/: test.map.scen
scripts/: visualization.R
shizhe/: .gitignore  main.cpp  run_all.sh  run_small.sh  test.cpp
src/: Entry.cpp  Entry.h  Hsymbol.h  Makefile  _cproject.xml  _project.xml  adj_graph.h  build.sh  centroid.h  constants.h  cpd.cpp  cpd.h  dijkstra.h  gm_parser.h  gridmap.h  lifelong_dij.h  list_graph.h  loader.h  main.cpp  mapper.h  offline_jump_point_locator.h  order.cpp  order.h  prefer_zero_cut.h  preprocessing.cpp  preprocessing.h  query.cpp  query.h  rect_wildcard.h  square_wildcard.h  src_jump_+_dfs  vec_io.h
test/: ObsFree.in  OneObs.in  hmoves.in
testcases/: test-heuristic.cpp  test-operations.cpp
tests/: gen-visual.cpp  lifelong-dij.cpp  main.cpp  test-heuristic.cpp  test-load.cpp  test-operations.cpp  test-preprocess.cpp  test-query.cpp  test-visual.cpp
utility/: Entry.cpp  Timer.cpp  Timer.h  balanced_min_cut.cpp  constants.h  coord.h  heap.h  mapper.cpp  mapper.h  vec_io.h  visualizer.h
(+1290 files in other folders)
